# support

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  commits.list
cmake/: package.cmake  support-config.h.in
include/: IndexRange.hh  RefCountedObject.hh  String.hh  StringData.hh  StringRange.hh
include/support/: IndexRange.hh  RefCountedObject.hh  SArray.hh  String.hh  StringData.hh  Vec.hh  Vector.hh  auto-vptr.hh  datastore.h  dllist.h  hash_table.h  ini.h  logical-types.h  macro.h  math-types.h  matrix.h  matrix.hh  meta.h  mlog-context.h  mlog.h  net.hh  readFileIntoString.hh  ref.hh  scalar.h  spt-context-callbacks.h  spt-context-handlers.h  spt-context-spec.h  spt-context.h  strutils.h  support-config.h  support.h  text.h  timeutil.h  vect.hh  vector.h
include/support/private/: mlog-context.h  spt-context.h
src/: CMakeLists.txt  Makefile  RefCountedObject.cc  datastore.c  dllist.c  hash_table.c  ini.c  matrix.c  meta.c  mlog-context.c  mlog.c  net.cc  readFileIntoString.cc  ref.cc  spt-context-parse-spec.c  spt-context.c  strutils.c  vector.c
tests/: CMakeLists.txt  Makefile  cmlog-test.c  dllist-test.c  matrix-test.cc  meta-test.c  strutils-test.c  timeutil-test.c  timeutil.h
unused/ntree/: Makefile  ntree.c  ntree.h
unused/vlist/: Makefile  list-test.c  list-test_old  rsztst  rsztst.c  semantic.cache  test-alphanumeric.c  vlist.c  vlist.h  vlist_old.c  vlist_old.h
